// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIInput> General Functionality should have a qahook on the input and wrapper 1`] = `
<div
  className="xui-inputwrapper"
  data-automationid="input-test--container"
>
  <input
    className="xui-input"
    data-automationid="input-test"
    disabled={false}
    onKeyUp={[Function]}
    readOnly={false}
    type="text"
  />
</div>
`;

exports[`<XUIInput> Line input has a qaHook 1`] = `
<div
  className="xui-inputwrapper"
  data-automationid="givenQAHook--container"
>
  <input
    className="xui-input"
    data-automationid="givenQAHook"
    disabled={false}
    onKeyUp={[Function]}
    readOnly={false}
    type="text"
  />
</div>
`;
